# PoCL-R-Reference-Android-Java-Client

./: .gitmodules  LICENSE  README.md
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/libs/: PLACE JOCL JAR HERE.txt
android/app/src/androidTest/java/org/portablecl/pocl_rreferenceandroidjavaclient/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/org/portablecl/pocl_rreferenceandroidjavaclient/: ConfigStore.java  DNSDiscoveryHandler.java  DeviceDemoActivity.java  DiscoverySpinnerAdapter.java  MainActivity.java  MandelbrotDemoActivity.java  NativeUtils.java  RemoteDiscoveryManager.java  StartupActivity.java
android/app/src/main/res/layout/: activity_main.xml  activity_mendelbrot_demo.xml  activity_startup.xml  content_scrolling.xml
android/app/src/main/res/layout-w1240dp/: content_scrolling.xml
android/app/src/main/res/layout-w936dp/: content_scrolling.xml
android/app/src/main/res/menu/: menu_startup.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-v23/: themes.xml
android/app/src/test/java/org/portablecl/pocl_rreferenceandroidjavaclient/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
